--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 __pycache__
+**.pyc
+
+# folders
+datasets/
 results/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# OS or Editor related files
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+.vscode/
+.idea/
