Converted code to SI units

--- a/config/material_presets.yml
+++ b/config/material_presets.yml
@@ -1,6 +1,6 @@
-# E_x, E_z, E_y: Young's moduli (MPa)
+# E_x, E_z, E_y: Young's moduli (Pa)
 # nu_xy, nu_yz, nu_zx: Poisson's ratioes
-# G_xy, G_yz, G_zx: Shear moduli (MPa)
+# G_xy, G_yz, G_zx: Shear moduli (Pa)
 
 pla:
   material_type: "transversely_isotropic" # TODO get accurate values
@@ -10,3 +10,9 @@ pla:
   nu_zx: 0.36
   G_xy: 1213
   G_zx: 600
+
+steel:
+  material_type: "isotropic" # TODO get accurate values
+  E_x: 2.0e11
+  nu_xy: 0.3
+  G_xy: 7.7e10
