--- a/config/force_fields.yml
+++ b/config/force_fields.yml
@@ -1,5 +1,5 @@
-# x1, x2; y1, y2; z1, z2: int range for elements that force is applied to (all inclusive)
-# F_x, F_y, F_z: the values of the 3D force vector applied to elements in range (Newtons)\
+# x1, x2; y1, y2; z1, z2: int range for elements that force is applied to
+# F_x, F_y, F_z: the values of the 3D force vector applied to elements in range (Newtons)
 
 force_field_0:
   x1: 0
@@ -13,12 +13,12 @@ force_field_0:
   F_z: 0
 
 force_field_1:
-  x1: 19
+  x1: 0
   x2: 20
-  y1: 6
-  y2: 20
-  z1: 0
-  z2: 14
+  y1: 0
+  y2: 16
+  z1: 38
+  z2: 39
   F_x: 0
-  F_y: 0
-  F_z: -1000
+  F_y: 1000
+  F_z: 0
